# goit-algo2-hw-03

./: Makefile  README.md  pyproject.toml  task_1.py  task_2.py
