[project]
name = "goit-algo2-hw-03"
version = "0.1.0"
description = "Algorithms"
authors = [
    {name = "RomanTuras",email = "salden.com@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "btrees (>=6.1,<7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true